--- a/TASK1/index.html
+++ b/TASK1/index.html
@@ -21,7 +21,8 @@
         <li class="link"><a href="#">Reviews</a></li>
       </ul>
       <button class="btn">Contact Us</button>
-    </nav>
+    </nav><br><br>
+    <div id="slogan" class="nav__logo">Travel agency that really cares.</div>
     <header>
       <div class="section__container header__container">
         <div class="header__image">
